<resources>

    <string name="app_name" translatable="false">Nicetodo</string>
    <string name="nicetodo" translatable="false">nice todo</string>
    <string name="nicetodo_description">規劃更有效率，生活更加美好</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_message">Message</string>
    <string name="action_create_task">Create task</string>

    <string name="add_record">Add record</string>
    <string name="no_address_found" translatable="false">Sorry, no address found</string>
    <string name="no_location_data_provided" translatable="false">No location data provided</string>
    <string name="service_not_available" translatable="false">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used" translatable="false">Invalid latitude or longitude used</string>
    <string name="address_found" translatable="false">Address found</string>
    <string name="working_time">Working time</string>
    <string name="check_out">Check out</string>
    <string name="check_in">Check in</string>
    <string name="check_in_time">Check in time</string>
    <string name="wip_task">WIP task</string>
    <string name="next_task">Next task</string>
    <string name="pause">Pause</string>
    <string name="complete">Complete</string>
    <string name="record">Record</string>
    <string name="cancel">Cancel</string>
    <string name="task_log">Task log</string>
    <string name="start_work">Start work</string>
    <string name="no_internet_connection">Check your connection and try again.</string>
    <string name="no_internet_connection_information">Some function couldn\'t work normally. Please check your connection and try again.</string>
    <string name="error_account_password">Account or password is not correct.</string>
    <string name="retry">Retry</string>
    <string name="date_format_mm_dd_yyyy" translatable="false">%1$s/%2$s/%3$s</string>
    <string name="date_format_yyyy_mm_dd" translatable="false">%1$s/%2$s/%3$s</string>
    <string name="date_format_mm_dd">%1$s/%2$s</string>
    <string name="complete_task">Complete Task: %1$s</string>

    <string name="parse_nicloud_application_id" translatable="false">ympLENaIwwMAb4kEGhbodL0HhOnCnzyS8XC1voKE</string>
    <string name="parse_nicloud_application_client_key" translatable="false">q3j2FwlBY8pyS33yg0T7DsQ4JWK2LcFcdbtDGjl6</string>

    <string name="basic_membership_case_beyond_3">Basic account can only have 3 cases</string>

    <!-- Main -->
    <string name="task_list_no_task">No task</string>
    <string name="task_card_no_due_date">No due date</string>

    <!-- Drawer menu -->
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>

    <!-- Main menu -->
    <string name="main_menu_my_tasks">My tasks</string>
    <string name="main_menu_cases">My cases</string>

    <!-- Message menu -->
    <string name="message_menu_messages">Messages</string>

    <!-- Login -->
    <string name="login_company_account">Company account</string>
    <string name="login_account">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="all_register">Register</string>
    <string name="all_send">Send</string>
    <string name="all_password_again">Please type password again</string>
    <string name="all_name">Name</string>
    <string name="all_account_error_empty">You need to enter an email</string>
    <string name="all_account_error_format_incorrect">Email format is not correct</string>
    <string name="all_password_error_empty">You need to enter a password</string>
    <string name="all_password_error_not_match">Your password and confirmation password do not match</string>
    <string name="all_name_error_empty">You need to enter a name</string>

    <!-- Detailed task -->
    <string name="detailed_task_tab_task_info">Task information</string>
    <string name="detailed_task_tab_check_list">Check list</string>
    <string name="detailed_task_tab_text">Text</string>
    <string name="detailed_task_tab_photo">Photo</string>
    <string name="detailed_task_tab_file">File</string>
    <string name="detailed_task_upload_file">Upload file %1$s</string>
    <string name="detailed_task_upload_photo">Upload photo %1$s</string>
    <string name="text_log_no_log_text">No text</string>
    <string name="file_list_no_log_text">No file</string>
    <string name="check_list_no_task_text">No task</string>

    <!-- Case -->
    <string name="case_tab_info">Info</string>
    <string name="case_tab_task">Task</string>
    <string name="case_tab_discussion">Discussion</string>
    <string name="case_tab_file">File</string>

    <!-- Case info -->
    <string name="case_info_description">Case description</string>
    <string name="case_info_no_description">No description</string>
    <string name="case_info_worker_avatar_list_title">Participate workers</string>

    <!-- Task info -->
    <string name="task_info_task_description">Task description</string>
    <string name="task_info_task_no_description">No description</string>
    <string name="task_info_task_due_date">Due date</string>
    <string name="task_info_task_no_due_date">No due date</string>
    <string name="task_info_complete_task_button_text">Complete task</string>

    <!-- Add Log container -->
    <string name="add_text_log_hint">Input text...</string>
    <string name="add_text_log_button_text">Add</string>
    <string name="add_check_item_hint">Input check item...</string>
    <string name="add_check_item_button_text">Add</string>
    <string name="add_file_button_text">Upload file</string>
    <string name="take_photo_button_text">Take photo</string>
    <string name="add_log_complete_text">Record message successfully</string>
    <string name="complete_uploading_image">Record photo successfully</string>
    <string name="complete_uploading_file">Record file successfully</string>
    <string name="add_log_uploading_text">Uploading text...</string>
    <string name="uploading_image">Uploading photo...</string>
    <string name="uploading_file">Uploading file...</string>
    <string name="upload_failed">Upload failed, please try again</string>

    <!-- Dialog -->
    <string name="dialog_complete_task_text">Do you want to complete the task?</string>
    <string name="dialog_check_in_time">Check in time</string>
    <string name="dialog_check_out_time">Check out time</string>
    <string name="dialog_thanks_for_working">Check out. Thanks for working today!</string>
    <string name="dialog_have_not_check_in">Have not check in</string>
    <string name="dialog_have_not_check_out">Have not check out</string>
    <string name="dialog_check_in">Check in</string>
    <string name="dialog_check_out">Check out</string>
    <string name="dialog_complete_pause_task">Please complete or pause wip task first</string>
    <string name="dialog_log_out">Logout?</string>

    <!-- Task status -->
    <string name="task_status_unclaimed">Not start</string>
    <string name="task_status_pending">In schedule</string>
    <string name="task_status_wip">Working</string>
    <string name="task_status_pause">Pause</string>
    <string name="task_status_finished">Finish</string>
    <string name="task_status_in_review">In Review</string>
    <string name="task_status_warning">Warning</string>
    <string name="task_status_stop">Stop</string>
    <string name="task_status_cancel">Cancel</string>

    <!-- Worker status -->
    <string name="worker_status_off">Off</string>
    <string name="worker_status_stop">Stop</string>
    <string name="worker_status_pause">Pause</string>
    <string name="worker_status_pending">Pending</string>
    <string name="worker_status_wip">WIP</string>

    <!-- Download file -->
    <string name="download_file">"Download File  %1$s"</string>
    <string name="downloading">Downloading...</string>
    <string name="download_completed">Download Completed</string>

    <!-- Message chat -->
    <string name="message_chat_message_box_hint">Send a message</string>

    <!-- Discussion -->
    <string name="discussion_box_hint">Send a message</string>

    <!-- Create case/task -->
    <string name="create_case">Create case</string>
    <string name="create_task">Create task</string>
    <string name="hint_input_case_name">Input case name</string>
    <string name="hint_input_task_name">Input task name</string>
    <string name="hint_please_choose_case">Please choose a case</string>
    <string name="hint_please_pick_due_date">Please pick a due date</string>

    <!-- Choose worker -->
    <string name="hint_choose_worker">Please choose a worker</string>

    <!-- Add worker to case -->
    <string name="add_worker_to_case_title">Add participated worker</string>
    <string name="can_not_find_user">There is no such user</string>
    <string name="add_user_successfully">Add worker successfully</string>
    <string name="add_worker_button_text">Add</string>

</resources>
