<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/login_activity_background_color">

    <include
        layout="@layout/no_internet_connection_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/login_logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/login_nicetodo_image_margin_bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_nicetodo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nicetodo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_nicetodo_margin_top"
            android:textSize="@dimen/login_nicetodo_description_text_size"
            android:text="@string/nicetodo_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_nicetodo_description_text_size"
            android:text="@string/nicetodo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="@dimen/login_container_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo_container"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_container_background"
        android:padding="@dimen/login_container_padding"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_company_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:inputType="textEmailAddress"
                android:hint="@string/login_company_account"
                android:visibility="gone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_account_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:inputType="textEmailAddress"
                android:hint="@string/login_account"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:inputType="textPassword"
                android:hint="@string/login_password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_login_password_again"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:inputType="textPassword"
                android:hint="@string/all_password_again"
                android:visibility="gone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_login_user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:inputType="text"
                android:hint="@string/all_name"
                android:visibility="gone"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/login"/>

            <Button
                android:id="@+id/right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/all_register"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
