<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divider">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/check_list_swipe_refresh_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/check_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/check_list_no_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_list_no_task_text"
            android:textSize="@dimen/empty_text_size" />

    </FrameLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/add_check_item_container"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:id="@+id/add_check_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/add_log_container_min_height"
        android:paddingLeft="@dimen/add_log_container_padding_left_right"
        android:paddingRight="@dimen/add_log_container_padding_left_right"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/add_check_item_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/add_check_item_button"
            android:layout_marginRight="@dimen/add_log_box_margin_right"
            android:hint="@string/add_check_item_hint"/>

        <TextView
            android:id="@+id/add_check_item_button"
            style="@style/AddLogButton"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/add_check_item_button_text" />

    </RelativeLayout>

</RelativeLayout>
