<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding"
    android:gravity="center_horizontal"
    android:background="@color/dialog_background_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/check_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dialog_check_date_text_color"
        android:textSize="@dimen/dialog_check_date_text_size"
        android:text="11月12日"/>

    <LinearLayout
        android:id="@+id/dialog_check_time_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dialog_check_time_container_padding_top_bottom"
        android:paddingBottom="@dimen/dialog_check_time_container_padding_top_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialog_check_time_text_color"
                android:text="@string/dialog_check_in_time"/>

            <TextView
                android:id="@+id/check_in_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_check_time_margin_top"
                android:textColor="@color/dialog_check_time_text_color"
                android:textSize="@dimen/dialog_check_time_text_size"
                android:textStyle="bold"
                android:text="07:30"/>

        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_forward"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialog_check_time_text_color"
                android:text="@string/dialog_check_out_time"/>

            <TextView
                android:id="@+id/check_out_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_check_time_margin_top"
                android:textColor="@color/dialog_uncheck_time_text_color"
                android:textSize="@dimen/dialog_check_time_text_size"
                android:textStyle="bold"
                android:text="@string/dialog_have_not_check_out"/>

        </LinearLayout>

    </LinearLayout>

    <TextView style="@style/DialogButtonStyle.Green"
        android:id="@+id/check_button"
        android:text="@string/dialog_check_out"/>

    <TextView
        android:id="@+id/check_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dialog_check_current_time_location_padding_top_bottom"
        android:paddingBottom="@dimen/dialog_check_current_time_location_padding_top_bottom"
        android:drawableLeft="@drawable/ic_current_time"
        android:drawablePadding="@dimen/dialog_check_current_time_drawable_padding"
        android:text="12:39 pm"/>

    <include layout="@layout/location_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dialog_check_current_time_location_padding_top_bottom"
        android:paddingBottom="@dimen/dialog_check_current_time_location_padding_top_bottom"/>

</LinearLayout>